fixing css, was overcomplicating my selectors. Made more readable

--- a/styles.css
+++ b/styles.css
@@ -48,7 +48,7 @@ nav li {
 }
 
 nav li a {
-    /**margin-left:20px;**/
+    
     text-decoration: none;
     color: rgb(255, 0, 0);
     font-size: 18px;
@@ -70,18 +70,18 @@ footer{
 }
 
 
-/**Home page Main style**/
 
-.home {
+.container {
     display: grid;
     grid-template-columns: 1fr 1fr;
     justify-content: space-evenly;
     padding: 20px;
     gap: 30px;
+    
 
 }
 
-.home-col-1, .home-col-2 {
+.container div{
     background-color:rgba(0, 0, 0, 0.378);;
     display: grid;
     padding: 20px;;
@@ -91,7 +91,7 @@ footer{
 }
 
 
-.home-col-1 h2 {   
+h2 {   
     color: red;
     font-size: 30px;
     padding-bottom: 10px; 
@@ -99,19 +99,26 @@ footer{
     width:100%
 }
 
-.home-col-1 h3 {
+h3 {
     color: white;
     font-size: 20px;
-    text-align: left;
+    text-align: center;
     width: 75%;
 }
 
-.home-col-1 ul {
+p {
+    color: white;
+    font-size: 18px;
+    text-align: left;
+    width: 100%;
+}
+
+.container ul {
     width:50%;
     
 }
 
-.home-col-1  ul li {
+.container ul li {
     color: white;
     font-size: 15px;
     padding-bottom: 10px;
@@ -122,8 +129,8 @@ footer{
 
 
 
-.home-col-2 img {
-    width: 400px;
+.singer-ad img {
+    width: 500px;
     height: auto;
 }
 
@@ -139,76 +146,13 @@ footer{
      
 }
 
+
+
 .learn-more-btn:hover{
     background-color: black;
 }
 
-/**Machine Page Styling**/
 
-
-.machine {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    justify-content: space-evenly;
-    padding: 20px;
-    gap: 30px;
-
-}
-
-.machine-col-1-row-1, .machine-col-2-row-1 {
-    background-color:rgba(0, 0, 0, 0.378);;
-    display: grid;
-    padding: 20px;;
-    place-items: center;
-    
-    
-}
-
-
-.machine-col-1-row-1 h2 {   
-    color: red;
-    font-size: 30px;
-    padding-bottom: 10px; 
-    text-align: center;
-    width:100%
-}
-
-.machine-col-1-row-1 h3 {
-    color: white;
-    font-size: 20px;
-    text-align: left;
-    width: 75%;
-    padding-bottom: 10px; 
-}
-
-.machine-col-1-row-1 p {
-    color: white;
-    text-align: left;
-    padding: 20px 10px;
-    
-    
-}
-
-.machine-col-1-row-1 ul {
-    width:50%;
-    
-}
-
-.machine-col-1-row-1  ul li {
-    color: white;
-    font-size: 15px;
-    padding-bottom: 10px;
-    text-align: left;
-    
-    
-}
-
-
-
-.machine-col-2-row-1 img {
-    width: 400px;
-    height: auto;
-}
 
 .manual{
     background-color: rgba(0, 0, 0, 0.378);
